# one_for_one

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
one_for_one/: Cargo.toml
one_for_one/src/: lib.rs
