[workspace]
members = [
    "one_for_one",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Pierre Fenoll <pierrefenoll@gmail.com>"]
repository = "https://github.com/fenollp/one_for_one"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
# tokio = { git = "https://github.com/fenollp/tokio.git", branch = "task-local-clone", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0,>=0.7", features = ["rt"] }
# tokio-util = { git = "https://github.com/fenollp/tokio.git", branch = "task-local-clone", features = ["rt"] }
tracing = "0,>=0.1"
