[package]
name = "one_for_one"
description = "A crate to supervize spawn'ed async tasks"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
